--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
 
 function cube() {
   var num = document.getElementById("n1");
-  Math.pow(num.value,3);
+  num.value  =Math.pow(num.value,3);
 }
 
 function square() {
